@@ -1,5 +1,5 @@
 glmexplorer <-
-function(formula, data, family=poisson(), ...)
+function(formula, data, family=poisson(), select=FALSE, ...)
 {
     lhs <- formula[[2]]
     if (missing(data))
@@ -14,12 +14,19 @@ function(formula, data, family=poisson(), ...)
         stop("'NA' values not allowed")
     n <- NROW(Y)
     J <- NCOL(Y)
-    glmfit <- lapply(1:J, function(z) glm.fit(X, Y[, z], family=family, ...))
-    glmsum <- lapply(glmfit, function(z) {
-        class(z) <- "glm"
-        summary(z)$coef})
-    names(glmsum) <- colnames(Y)
-    class(glmsum) <- "glmexplorer"
-    glmsum
+    if (select) {
+        glmfit <- lapply(1:J, function(z) glm(Y[, z] ~ ., rhs, family=family))
+        glmsel <- lapply(glmfit, function(z) step(z, direction="backward", trace=0))
+        rval <- lapply(glmsel, function(z) summary(z)$coef)
+    } else {
+        glmfit <- lapply(1:J, function(z) glm.fit(X, Y[, z], family=family))
+        rval <- lapply(glmfit, function(z) {
+            class(z) <- "glm"
+            summary(z)$coef})
+    }
+    names(rval) <- colnames(Y)
+    class(rval) <- "glmexplorer"
+    attr(rval, "family") <- family$family
+    attr(rval, "select") <- select
+    rval
 }
-
